using System.Data;
using System.Net;
using System.Net.Sockets;
using System.Text;
using Shared;

namespace SensorService
{
    class Program
    {
        static void Main(string[] args)
        {
            // Check if this sensor cluster is initialized as primary or backup from environment variables
            var isPrimary = Environment.GetEnvironmentVariable("IS_PRIMARY")?.ToLower() == "true";

            // Start each sensor server in its own thread
            foreach (var sensor in SensorRegistry.All.Where(s => s.IsBackup == !isPrimary))
            {
                var thread = new Thread(() => StartSensorServer(sensor));
                thread.Start();
            }

            Console.WriteLine("All sensors started.");
            Thread.Sleep(Timeout.Infinite); // keep app running
        }

        /// <summary>
        /// Starts a sensor server for the given sensor information.
        /// This is a sensor-cluster
        /// </summary>
        static void StartSensorServer(SensorInfo sensorInfo)
        {
            // Create a sensor instance based on the type by the metadata in SensorInfo
            // SensorInfo includes the ID, name, port, and whether it is a backup sensor
            // This allows us to instantiate the correct sensor type dynamically
            // SensorRegistry lives in the Shared/ namespace
            Sensor sensor = sensorInfo.Id switch
            {
                var id when id.StartsWith("lidar") => new LIDARSensor(sensorInfo.Id, sensorInfo.Name, sensorInfo.Port, sensorInfo.IsBackup),
                var id when id.StartsWith("camera") => new CameraSensor(sensorInfo.Id, sensorInfo.Name, sensorInfo.Port, sensorInfo.IsBackup),
                var id when id.StartsWith("radar") => new RadarSensor(sensorInfo.Id, sensorInfo.Name, sensorInfo.Port, sensorInfo.IsBackup),
                _ => throw new ArgumentException($"Unknown sensor type in ID: {sensorInfo.Id}")
            };

            var listener = new TcpListener(IPAddress.Any, sensorInfo.Port);
            listener.Start();

            Console.WriteLine($"Sensor '{sensorInfo.Name}' is listening on port {sensorInfo.Port}...");

            while (true)
            {
                using var client = listener.AcceptTcpClient();
                using var stream = client.GetStream();

                byte[] buffer = new byte[256];
                int read = stream.Read(buffer, 0, buffer.Length);
                string request = Encoding.UTF8.GetString(buffer, 0, read).Trim().ToUpper();

                // Handle the request based on the command received
                string response;
                switch (request)
                {
                    case SensorMessages.PING:
                        response = sensor.CheckHealth();
                        break;
                    case SensorMessages.RESTART:
                        response = sensor.RestartAndReport();
                        break;
                    case SensorMessages.RELOAD:
                        sensor.LoadCheckpoint();
                        response = "CHECKPOINT_RELOADED";
                        break;
                    default:
                        response = "UNKNOWN_COMMAND";
                        break;
                }

                byte[] reply = Encoding.UTF8.GetBytes(response);
                stream.Write(reply, 0, reply.Length);
            }
        }
    }
}
