namespace Shared
{
    public static class SensorMessages
    {
        /// <summary>
        /// Sensor messages used for communication between sensors and the server.
        /// </summary>
        public const string PING = "PING";
        public const string RESTART = "RESTART";
        public const string RELOAD = "RELOAD";
    }
}
